--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   http: ^1.2.1
+  fl_chart: ^0.64.0 # <-- THÊM DÒNG NÀY
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
